santa is coming to Ktown

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ canvas {
 #snow {
   background: none;
   font-family: Androgyne;
-  background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
+  background-image: url('../assets/snow1.png'), url('../assets/snow2.png'), url('../assets/snow2.png');
   height: 100%;
   left: 0;
   position: absolute;
@@ -46,25 +46,25 @@ canvas {
 }
 
 @keyframes snow {
-  0% { background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% { background-position: 500px 1000px, 200px 400px, -100px 300px;}
+  0% { background-position: 0 0, 0 0, 0 0; }
+  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
+  100% { background-position: 500px 1000px, 200px 400px, -100px 300px; }
 }
 
 @-moz-keyframes snow {
-  0% { background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% { background-position: 400px 1000px, 200px 400px, 100px 300px;}
+  0% { background-position: 0 0, 0 0, 0 0; }
+  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
+  100% { background-position: 400px 1000px, 200px 400px, 100px 300px; }
 }
 
 @-webkit-keyframes snow {
-  0% { background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% { background-position: 500px 1000px, 200px 400px, -100px 300px;}
+  0% { background-position: 0 0, 0 0, 0 0; }
+  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
+  100% { background-position: 500px 1000px, 200px 400px, -100px 300px; }
 }
 
 @-ms-keyframes snow {
-  0% { background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% { background-position: 500px 1000px, 200px 400px, -100px 300px;}
+  0% { background-position: 0 0, 0 0, 0 0; }
+  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
+  100% { background-position: 500px 1000px, 200px 400px, -100px 300px; }
 }
