--- a/css/style.css
+++ b/css/style.css
@@ -29,42 +29,33 @@ canvas {
   top: 0;
 }
 
-#snow {
-  background: none;
-  font-family: Androgyne;
-  background-image: url('../assets/snow1.png'), url('../assets/snow2.png'), url('../assets/snow2.png');
-  height: 100%;
-  left: 0;
+#particles-js {
   position: absolute;
-  top: 0;
   width: 100%;
-  z-index: 1;
-  -webkit-animation: snow 10s linear infinite;
-  -moz-animation: snow 10s linear infinite;
-  -ms-animation: snow 10s linear infinite;
-  animation: snow 10s linear infinite;
+  height: 100%;
+  background-color: #b61924;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
-@keyframes snow {
-  0% { background-position: 0 0, 0 0, 0 0; }
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
-  100% { background-position: 500px 1000px, 200px 400px, -100px 300px; }
+.count-particles {
+  background: #002;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 80px;
+  color: #13e8e9;
+  font-size: 0.8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
 }
 
-@-moz-keyframes snow {
-  0% { background-position: 0 0, 0 0, 0 0; }
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
-  100% { background-position: 400px 1000px, 200px 400px, 100px 300px; }
-}
-
-@-webkit-keyframes snow {
-  0% { background-position: 0 0, 0 0, 0 0; }
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
-  100% { background-position: 500px 1000px, 200px 400px, -100px 300px; }
-}
-
-@-ms-keyframes snow {
-  0% { background-position: 0 0, 0 0, 0 0; }
-  50% { background-position: 500px 500px, 100px 200px, -100px 150px; }
-  100% { background-position: 500px 1000px, 200px 400px, -100px 300px; }
+.js-count-particles {
+  font-size: 1.1em;
 }
