--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,3 @@
-:root {
-  --red: #f24647;
-  --white: #d8d0d1;
-  --brown: #59322e;
-  --pink: #f4996c;
-  --brownDark: #231a0f;
-  --blue: #67c6c0;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -17,9 +8,9 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: -webkit-linear-gradient(#f0323f, #f0323f);
-  background: -o-linear-gradient(#f0323f, #f0323f);
-  background: linear-gradient(#f0323f, #f0323f);
+  background: -webkit-linear-gradient(#f0323f, #cd0020);
+  background: -o-linear-gradient(#f0323f, #cd0020);
+  background: linear-gradient(#f0323f, #cd0020);
 }
 
 canvas {
@@ -33,29 +24,9 @@ canvas {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #b61924;
+  background-color: #fff;
   background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-}
-
-.count-particles {
-  background: #002;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13e8e9;
-  font-size: 0.8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-.js-count-particles {
-  font-size: 1.1em;
 }
