--- a/server/css/style.css
+++ b/server/css/style.css
@@ -30,3 +30,12 @@ canvas {
   background-size: cover;
   background-position: 50% 50%;
 }
+
+.SpRecognition {
+  position: absolute;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  bottom: 0;
+  right: 0;
+}
