--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Barlow', sans-serif;
 }
 
 #container {
   position: absolute;
+  z-index: -99;
+  top: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -13,11 +16,138 @@
   background: radial-gradient(#239c2e, #239c2e, #13741f);
 }
 
-canvas {
-  position: absolute;
+h1 {
+  text-align: center;
+  padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 100%;
-  top: 0;
+  flex-direction: column;
+}
+
+.to,
+.from {
+  color: rgba(242, 242, 242, 1);
+  text-transform: uppercase;
+  font-size: 1em;
+  z-index: -2;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  margin-top: 1rem;
+  text-transform: none;
+  color: rgb(55, 55, 55);
+  font-size: 0.9em;
+  text-align: center;
+  width: 100%;
+  transition: font-size 0.5s, color 0.5s;
+}
+
+a:hover {
+  margin-top: 1rem;
+  text-transform: none;
+  color: rgb(80, 80, 80);
+  font-size: 1em;
+}
+
+input[type="text"] {
+  border-radius: 0.5em;
+  padding: 0.4em 1em;
+  width: 90%;
+  text-transform: uppercase;
+  margin-bottom: 0.1rem;
+}
+
+input[type=text]:focus {
+  background-color: #13741f;
+  color: #fff;
+  border-radius: 0.5em;
+  border: 1px solid #13741f;
+  box-shadow: 0 2px 0 0 #13741f;
+}
+
+textarea {
+  border-radius: 0.5em;
+  padding: 0 1em;
+  width: 90%;
+}
+
+textarea:focus {
+  background-color: #13741f;
+  color: #fff;
+  border-radius: 0.5em;
+  border: 1px solid #13741f;
+  box-shadow: 0 2px 0 0 #13741f;
+}
+
+input:focus::placeholder {
+  color: #fff;
+}
+
+.border {
+  font-size: 16px;
+  border: 2px solid #13741f;
+  background-color: #fff;
+  box-shadow: 0 3px 0 0 #13741f;
+}
+
+input:focus {
+  outline: 0;
+}
+
+::placeholder {
+  color: #ccc;
+}
+
+.border::placeholder {
+  color: #13741f;
+}
+
+.wrap {
+  text-align: center;
+}
+
+.input-contain {
+  float: left;
+  text-align: center;
+}
+
+.buttonsGroup {
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+button {
+  margin-top: 0.5em;
+  font-size: 1rem;
+  background-color: #13741f;
+  color: #fff;
+  border-radius: 0.5em;
+  border: 1px solid #13741f;
+  box-shadow: 0 2px 0 0 #13741f;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 0.5em;
+  width: 40%;
+}
+
+.button-container {
+  text-align: center;
+}
+
+.topbuttons {
+  width: 40%;
+}
+
+.topbuttons .button {
+  width: 5%;
+  background-color: white;
+  color: black;
+  border: 0.2rem black solid;
 }
 
 #particles-js {
@@ -32,16 +162,13 @@ canvas {
 }
 
 .SpRecognition {
+  width: 30%;
+  margin: 1rem;
   position: absolute;
   z-index: 9999;
   display: flex;
   flex-direction: column;
+  align-items: center;
   bottom: 0;
   right: 0;
-}
-
-.from, .to {
-  z-index: 99;
-  color: white;
-  position: absolute;
 }
