--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -11,19 +11,27 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: -webkit-radial-gradient(#239c2e, #239c2e, #13741f);
-  background: -o-radial-gradient(#239c2e, #239c2e, #13741f);
   background: radial-gradient(#239c2e, #239c2e, #13741f);
 }
 
 h1 {
   text-align: center;
+  padding-top: 32px;
   padding-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .to,
@@ -37,16 +45,19 @@ h1 {
 
 a {
   text-decoration: none;
+  margin-top: 16px;
   margin-top: 1rem;
   text-transform: none;
   color: rgb(55, 55, 55);
   font-size: 0.9em;
   text-align: center;
   width: 100%;
+  -webkit-transition: font-size 0.5s, color 0.5s;
   transition: font-size 0.5s, color 0.5s;
 }
 
 a:hover {
+  margin-top: 16px;
   margin-top: 1rem;
   text-transform: none;
   color: rgb(80, 80, 80);
@@ -58,6 +69,7 @@ input[type="text"] {
   padding: 0.4em 1em;
   width: 90%;
   text-transform: uppercase;
+  margin-bottom: 1.6px;
   margin-bottom: 0.1rem;
 }
 
@@ -66,7 +78,8 @@ input[type=text]:focus {
   color: #fff;
   border-radius: 0.5em;
   border: 1px solid #13741f;
-  box-shadow: 0 2px 0 0 #13741f;
+  -webkit-box-shadow: 0 2px 0 0 #13741f;
+          box-shadow: 0 2px 0 0 #13741f;
 }
 
 textarea {
@@ -80,7 +93,20 @@ textarea:focus {
   color: #fff;
   border-radius: 0.5em;
   border: 1px solid #13741f;
-  box-shadow: 0 2px 0 0 #13741f;
+  -webkit-box-shadow: 0 2px 0 0 #13741f;
+          box-shadow: 0 2px 0 0 #13741f;
+}
+
+input:focus::-webkit-input-placeholder {
+  color: #fff;
+}
+
+input:focus:-ms-input-placeholder {
+  color: #fff;
+}
+
+input:focus::-ms-input-placeholder {
+  color: #fff;
 }
 
 input:focus::placeholder {
@@ -91,15 +117,40 @@ input:focus::placeholder {
   font-size: 16px;
   border: 2px solid #13741f;
   background-color: #fff;
-  box-shadow: 0 3px 0 0 #13741f;
+  -webkit-box-shadow: 0 3px 0 0 #13741f;
+          box-shadow: 0 3px 0 0 #13741f;
 }
 
 input:focus {
   outline: 0;
 }
 
+::-webkit-input-placeholder {
+  color: #ccc;
+}
+
+:-ms-input-placeholder {
+  color: #ccc;
+}
+
+::-ms-input-placeholder {
+  color: #ccc;
+}
+
 ::placeholder {
   color: #ccc;
+}
+
+.border::-webkit-input-placeholder {
+  color: #13741f;
+}
+
+.border:-ms-input-placeholder {
+  color: #13741f;
+}
+
+.border::-ms-input-placeholder {
+  color: #13741f;
 }
 
 .border::placeholder {
@@ -117,18 +168,25 @@ input:focus {
 
 .buttonsGroup {
   width: 100%;
-  flex-direction: row;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 button {
   margin-top: 0.5em;
+  font-size: 16px;
   font-size: 1rem;
   background-color: #13741f;
   color: #fff;
   border-radius: 0.5em;
   border: 1px solid #13741f;
-  box-shadow: 0 2px 0 0 #13741f;
+  -webkit-box-shadow: 0 2px 0 0 #13741f;
+          box-shadow: 0 2px 0 0 #13741f;
   text-transform: uppercase;
   font-weight: bold;
   padding: 0.5em;
@@ -147,6 +205,7 @@ button {
   width: 5%;
   background-color: white;
   color: black;
+  border: 3.2px black solid;
   border: 0.2rem black solid;
 }
 
@@ -163,12 +222,22 @@ button {
 
 .SpRecognition {
   width: 30%;
+  margin: 16px;
   margin: 1rem;
   position: absolute;
   z-index: 9999;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   bottom: 0;
   right: 0;
 }
+
+/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJjc3Mvc3R5bGUuY3NzIiwic291cmNlUm9vdCI6IiJ9*/
