--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,13 +152,11 @@ button {
 
 #particles-js {
   position: absolute;
+  z-index: -89;
   width: 100%;
   height: 100%;
-  background-color: #fff;
-  background-image: url("");
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
+  top: 0;
 }
 
 .SpRecognition {
