--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,12 @@ h1 {
   flex-direction: column;
 }
 
+#name {
+  margin-top: -2rem;
+  text-transform: uppercase;
+  color: white;
+}
+
 .to,
 .from {
   color: rgba(242, 242, 242, 1);
