--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -11,7 +11,11 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: radial-gradient(#239c2e, #239c2e, #13741f);
+  background: radial-gradient(#113b51, #113b51, #2d2c2c);
+
+  /*
+  background: white;
+  */
 }
 
 h1 {
