--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -11,31 +11,56 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: radial-gradient(#113b51, #113b51, #2d2c2c);
-
-  /*
-  background: white;
-  */
+  background: -o-radial-gradient(#710018, #970022, #970022, #710018);
+  background: -webkit-gradient(linear, left top, left bottom, from(#710018), color-stop(#970022), color-stop(#970022), to(#710018));
+  background: linear-gradient(#710018, #970022, #970022, #710018);
 }
 
-h1 {
-  text-align: center;
-  padding-top: 32px;
-  padding-top: 2rem;
+.information {
+  background-color: rgba(0, 0, 0, .6);
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  margin-left: 60%;
+}
+
+.information-uitleg {
+  width: 90%;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin: 32px auto;
+  margin: 2rem auto;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  display: flex
+}
+
+.information-uitleg img {
+  margin-bottom: 32px;
+  margin-bottom: 2rem;
+}
+
+.information-uitleg-text {
+  width: 80%;
+  text-align: center;
+  color: white
+}
+
+.information-uitleg-text h1 {
+  text-transform: uppercase;
+  font-size: 17.6px;
+  font-size: 1.1rem;
+  margin-bottom: 16px;
+  margin-bottom: 1rem;
+}
+
+#gui {
+  position: absolute;
+  right: 1%;
+  font-size: 16px;
+  font-size: 1rem;
+  color: rgba(255, 255, 255, .9);
 }
 
 #name {
@@ -82,30 +107,33 @@ input[type="text"] {
   text-transform: uppercase;
   margin-bottom: 1.6px;
   margin-bottom: 0.1rem;
+  background-color: rgba(241, 168, 172, .7);
 }
 
 input[type=text]:focus {
-  background-color: #13741f;
+  background-color: #970022;
   color: #fff;
   border-radius: 0.5em;
-  border: 1px solid #13741f;
-  -webkit-box-shadow: 0 2px 0 0 #13741f;
-          box-shadow: 0 2px 0 0 #13741f;
+  border: 1px solid #970022;
+  -webkit-box-shadow: 0 2px 0 0 #970022;
+          box-shadow: 0 2px 0 0 #970022;
 }
 
 textarea {
   border-radius: 0.5em;
   padding: 0 1em;
   width: 90%;
+  background-color: rgba(241, 168, 172, .7);
 }
 
 textarea:focus {
-  background-color: #13741f;
+  background-color: #970022;
   color: #fff;
   border-radius: 0.5em;
-  border: 1px solid #13741f;
-  -webkit-box-shadow: 0 2px 0 0 #13741f;
-          box-shadow: 0 2px 0 0 #13741f;
+  border: 1px solid #970022;
+  -webkit-box-shadow: 0 2px 0 0 #970022;
+          box-shadow: 0 2px 0 0 #970022;
+  outline: none;
 }
 
 input:focus::-webkit-input-placeholder {
@@ -126,10 +154,9 @@ input:focus::placeholder {
 
 .border {
   font-size: 16px;
-  border: 2px solid #13741f;
-  background-color: #fff;
-  -webkit-box-shadow: 0 3px 0 0 #13741f;
-          box-shadow: 0 3px 0 0 #13741f;
+  border: 2px solid #970022;
+  -webkit-box-shadow: 0 3px 0 0 #970022;
+          box-shadow: 0 3px 0 0 #970022;
 }
 
 input:focus {
@@ -153,51 +180,31 @@ input:focus {
 }
 
 .border::-webkit-input-placeholder {
-  color: #13741f;
+  color: #970022;
 }
 
 .border:-ms-input-placeholder {
-  color: #13741f;
+  color: #970022;
 }
 
 .border::-ms-input-placeholder {
-  color: #13741f;
+  color: #970022;
 }
 
 .border::placeholder {
-  color: #13741f;
-}
-
-.wrap {
-  text-align: center;
-}
-
-.input-contain {
-  float: left;
-  text-align: center;
-}
-
-.buttonsGroup {
-  width: 100%;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  color: #970022;
 }
 
 button {
   margin-top: 0.5em;
   font-size: 16px;
   font-size: 1rem;
-  background-color: #13741f;
+  background-color: #970022;
   color: #fff;
   border-radius: 0.5em;
-  border: 1px solid #13741f;
-  -webkit-box-shadow: 0 2px 0 0 #13741f;
-          box-shadow: 0 2px 0 0 #13741f;
+  border: 1px solid #970022;
+  -webkit-box-shadow: 0 2px 0 0 #970022;
+          box-shadow: 0 2px 0 0 #970022;
   text-transform: uppercase;
   font-weight: bold;
   padding: 0.5em;
@@ -220,6 +227,19 @@ button {
   border: 0.2rem black solid;
 }
 
+.sound-adjustments {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 #particles-js {
   position: absolute;
   z-index: -89;
@@ -230,10 +250,9 @@ button {
 }
 
 .SpRecognition {
-  width: 30%;
+  width: 90%;
   margin: 16px;
   margin: 1rem;
-  position: absolute;
   z-index: 9999;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -244,9 +263,13 @@ button {
           flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
-  bottom: 0;
-  right: 0;
+          align-items: center
+}
+
+.SpRecognition label {
+  color: white;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJjc3Mvc3R5bGUuY3NzIiwic291cmNlUm9vdCI6IiJ9*/
