--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Barlow', sans-serif;
+  font-family: 'Kalam', sans-serif, cursive;
 }
 
 #container {
@@ -11,135 +11,164 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: -webkit-radial-gradient(#710018, #970022, #970022, #710018);
-  background: -o-radial-gradient(#710018, #970022, #970022, #710018);
   background: linear-gradient(#710018, #970022, #970022, #710018);
 }
 
-.information {
-  background-color: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  width: 40%;
-  height: 100%;
-  margin-left: 60%;
-}
-
 .information-uitleg {
-  width: 90%;
+  width: 60%;
   align-items: flex-end;
-  margin: 2rem auto;
+  margin-top: 3rem;
+  margin-left: 6%;
   display: flex;
-
-  & img {
-    margin-bottom: 2rem;
-  }
 }
 
 .information-uitleg-text {
   width: 80%;
   text-align: center;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: lighter;
+  font-family: sans-serif;
 
   & h1 {
     text-transform: uppercase;
-    font-size: 1.1rem;
-    margin-bottom: 1rem;
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  & p {
+    width: 60%;
+    font-style: italic;
+    font-family: sans-serif;
   }
 }
 
 #gui {
   position: absolute;
-  right: 1%;
+  left: 40%;
   font-size: 1rem;
+  font-family: sans-serif;
+  font-weight: lighter;
+  background-color: black;
   color: rgba(255, 255, 255, 0.9);
 }
 
-#name {
-  margin-top: -2rem;
-  text-transform: uppercase;
-  color: white;
+
+.information {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  margin-left: 60%;
+  display: flex;
+  align-self: center;
 }
 
-.to,
-.from {
-  color: rgba(242, 242, 242, 1);
-  text-transform: uppercase;
-  font-size: 1em;
-  z-index: -2;
-  width: 100%;
-}
-
-a {
-  text-decoration: none;
-  margin-top: 1rem;
-  text-transform: none;
-  color: rgb(55, 55, 55);
-  font-size: 0.9em;
-  text-align: center;
-  width: 100%;
-  transition: font-size 0.5s, color 0.5s;
-}
-
-a:hover {
-  margin-top: 1rem;
-  text-transform: none;
-  color: rgb(80, 80, 80);
-  font-size: 1em;
-}
-
-input[type="text"] {
-  border-radius: 0.5em;
-  padding: 0.4em 1em;
+.information-content {
   width: 90%;
-  text-transform: uppercase;
-  margin-bottom: 0.1rem;
-  background-color: rgba(241, 168, 172, 0.7);
+  margin: auto;
 }
 
-input[type=text]:focus {
-  background-color: #970022;
-  color: #fff;
-  border-radius: 0.5em;
-  border: 1px solid #970022;
-  box-shadow: 0 2px 0 0 #970022;
+.SpRecognition {
+  margin: 2rem auto 0;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  & label {
+    color: white;
+    font-size: 1.4rem;
+  }
+
+  & input[type="text"] {
+    border-radius: 0.5em;
+    padding: 0.4em 1em;
+    width: 40%;
+    color: white;
+    text-transform: uppercase;
+    margin-bottom: 0.1rem;
+    border: 1px solid #42000d;
+    box-shadow: 0 2px 0 0 #42000d;
+    background-color: rgba(99, 0, 23, 0.7);
+  }
+
+  & input[type=text]:focus {
+    background-color: #970022;
+    color: #fff;
+    border-radius: 0.5em;
+    border: 1px solid #42000d;
+    box-shadow: 0 2px 0 0 #42000d;
+  }
+}
+
+.recipient {
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 2rem;
 }
 
 textarea {
   border-radius: 0.5em;
-  padding: 0 1em;
   width: 90%;
-  background-color: rgba(241, 168, 172, 0.7);
-}
+  color: white;
+  padding: 1rem 0 0 1rem;
+  background-color: rgba(99, 0, 23, 0.7);
 
-textarea:focus {
-  background-color: #970022;
-  color: #fff;
-  border-radius: 0.5em;
-  border: 1px solid #970022;
-  box-shadow: 0 2px 0 0 #970022;
-  outline: none;
-}
+  &::placeholder {
+    text-transform: uppercase;
+  }
 
-input:focus::placeholder {
-  color: #fff;
-}
-
-.border {
-  font-size: 16px;
-  border: 2px solid #970022;
-  box-shadow: 0 3px 0 0 #970022;
+  &:focus {
+    background-color: #970022;
+    color: #fff;
+    border-radius: 0.5em;
+    border: 1px solid #42000d;
+    box-shadow: 0 2px 0 0 #42000d;
+    outline: none;
+  }
 }
 
 input:focus {
   outline: 0;
 }
 
+input:focus::placeholder {
+  color: #fff;
+}
+
 ::placeholder {
   color: #ccc;
 }
 
+.border {
+  font-size: 16px;
+  border: 2px solid #42000d;
+  box-shadow: 0 3px 0 0 #42000d;
+}
+
 .border::placeholder {
-  color: #970022;
+  color: #960027;
+}
+
+.recording {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 20%;
+  margin-top: 1rem;
+  justify-content: space-between;
+
+  & audio {
+    margin-top: 0.5rem;
+  }
+
+  & audio::-webkit-media-controls-panel {
+    border-radius: 0.5em;
+    background-color: rgba(66, 0, 13, 0.8);
+  }
 }
 
 button {
@@ -147,34 +176,79 @@ button {
   font-size: 1rem;
   background-color: #970022;
   color: #fff;
+  border: none;
   border-radius: 0.5em;
-  border: 1px solid #970022;
-  box-shadow: 0 2px 0 0 #970022;
   text-transform: uppercase;
   font-weight: bold;
   padding: 0.5em;
   width: 40%;
 }
 
-.button-container {
-  text-align: center;
-}
-
-.topbuttons {
-  width: 40%;
-}
-
 .topbuttons .button {
-  width: 5%;
-  background-color: white;
-  color: black;
-  border: 0.2rem black solid;
+  width: 40%;
 }
 
 .sound-adjustments {
   display: flex;
   flex-flow: row;
+  width: 50%;
+  margin-left: 50%;
+  margin-top: 0.5rem;
   justify-content: space-between;
+
+  & select {
+    font-family: sans-serif;
+    width: 8rem;
+    height: 2rem;
+    color: white;
+    background-color: rgba(66, 0, 13, 0.8);
+    border: none;
+  }
+
+  & select:focus {
+    outline: none;
+  }
+}
+
+.sender {
+  margin-top: 2rem;
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+
+  & label {
+    width: 80%;
+  }
+}
+
+#save {
+  margin: 3rem auto 0;
+  background-color: 970022;
+  border: none;
+}
+
+.link {
+  margin: 2rem auto;
+}
+
+.to {
+  color: rgba(242, 242, 242, 1);
+  font-size: 1em;
+  z-index: -2;
+  text-align: center;
+  width: 100%;
+  font-weight: lighter;
+}
+
+a {
+  text-decoration: none;
+  margin-top: 1rem;
+  text-transform: none;
+  color: #970022;
+  font-size: 1.3em;
+  text-align: center;
+  width: 100%;
+  transition: font-size 0.5s, color 0.5s;
 }
 
 #particles-js {
@@ -184,18 +258,4 @@ button {
   height: 100%;
   background-repeat: no-repeat;
   top: 0;
-}
-
-.SpRecognition {
-  width: 90%;
-  margin: 1rem;
-  z-index: 9999;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  & label {
-    color: white;
-    align-self: flex-start;
-  }
 }
