--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,6 +108,11 @@
   flex-direction: row;
   align-items: center;
   margin-bottom: 2rem;
+
+  & p {
+    color: white;
+    font-size: 1.4rem;
+  }
 }
 
 textarea {
