--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: linear-gradient(#710018, #970022, #970022, #710018);
+  background: linear-gradient(#42000d, #630017, #630017, #42000d);
 }
 
 .information-uitleg {
@@ -56,7 +56,7 @@
 }
 
 .information {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.4);
   position: absolute;
   width: 40%;
   height: 100%;
@@ -113,6 +113,10 @@
     color: white;
     font-size: 1.4rem;
   }
+}
+
+.message {
+  color: white;
 }
 
 textarea {
@@ -241,6 +245,10 @@ button:focus {
   & label {
     width: 80%;
   }
+
+  & p {
+    color: white;
+  }
 }
 
 #save {
@@ -259,6 +267,18 @@ button:focus {
 
 .link {
   margin: 2rem auto;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+
+  & h1 {
+    color: rgba(242, 242, 242, 0.7);
+    font-weight: lighter;
+  }
+}
+
+.newLink {
+  margin-top: 4rem;
 }
 
 .to {
