--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,6 +79,11 @@
 
   & label {
     color: white;
+    font-weight: 300;
+    font-size: 1.4rem;
+  }
+
+  & p {
     font-size: 1.4rem;
   }
 
@@ -105,6 +110,7 @@
 
 .recipient {
   width: 100%;
+  display: flex;
   flex-direction: row;
   align-items: center;
   margin-bottom: 2rem;
@@ -112,6 +118,8 @@
   & p {
     color: white;
     font-size: 1.4rem;
+    width: 50%;
+    margin-left: 1rem;
   }
 }
 
@@ -282,7 +290,7 @@ button:focus {
 }
 
 .to {
-  color: rgba(242, 242, 242, 1);
+  color: #970022;
   font-size: 1em;
   z-index: -2;
   text-align: center;
