--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: linear-gradient(#42000d, #630017, #630017, #42000d);
+  background: linear-gradient(#0f2634, #113b51, #113b51, #0f2634);
 }
 
 .information-uitleg {
@@ -80,7 +80,7 @@
   & label {
     color: white;
     font-weight: 300;
-    font-size: 1.4rem;
+    font-size: 1rem;
   }
 
   & p {
@@ -93,18 +93,17 @@
     width: 40%;
     color: white;
     text-transform: uppercase;
-    margin-bottom: 0.1rem;
-    border: 1px solid #42000d;
-    box-shadow: 0 2px 0 0 #42000d;
-    background-color: rgba(99, 0, 23, 0.7);
+    border: 1px solid #19384e;
+    box-shadow: 0 2px 0 0 #19384e;
+    background-color: rgba(49, 105, 149, 0.9);
   }
 
   & input[type=text]:focus {
-    background-color: #970022;
+    background-color: #316995;
     color: #fff;
     border-radius: 0.5em;
-    border: 1px solid #42000d;
-    box-shadow: 0 2px 0 0 #42000d;
+    border: 1px solid #19384e;
+    box-shadow: 0 2px 0 0 #19384e;
   }
 }
 
@@ -113,12 +112,16 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 
   & p {
     color: white;
     font-size: 1.4rem;
     width: 50%;
+    margin-left: 1rem;
+  }
+
+  & input[type="text"] {
     margin-left: 1rem;
   }
 }
@@ -132,18 +135,18 @@ textarea {
   width: 90%;
   color: white;
   padding: 1rem 0 0 1rem;
-  background-color: rgba(99, 0, 23, 0.7);
+  background-color: rgba(49, 105, 149, 0.9);
 
   &::placeholder {
     text-transform: uppercase;
   }
 
   &:focus {
-    background-color: #970022;
+    background-color: #316995;
     color: #fff;
     border-radius: 0.5em;
-    border: 1px solid #42000d;
-    box-shadow: 0 2px 0 0 #42000d;
+    border: 1px solid #19384e;
+    box-shadow: 0 2px 0 0 #19384e;
     outline: none;
   }
 }
@@ -163,8 +166,8 @@ input:focus::placeholder {
 button {
   margin-top: 0.5em;
   font-size: 1rem;
-  background-color: #970022;
-  color: rgba(78, 0, 16, 1);
+  background-color: #316995;
+  color: #19384e;
   border: none;
   border-radius: 0.5em;
   text-transform: uppercase;
@@ -175,22 +178,23 @@ button {
 
 .border {
   font-size: 16px;
-  border: 2px solid #42000d;
-  box-shadow: 0 3px 0 0 #42000d;
+  border: 2px solid #19384e;
+  box-shadow: 0 3px 0 0 #19384e;
 }
 
 .border::placeholder {
-  color: #960027;
+  color: #19384e;
 }
 
 .recording {
   width: 90%;
-  margin: 1rem 0;
+  margin: 0 0 1rem;
   height: 20%;
 
   & button {
     width: 100%;
-    background-color: #710018;
+    color: rgba(12, 26, 39, 1);
+    background-color: #316995;
   }
 }
 
@@ -209,7 +213,8 @@ button {
 
   & button {
     width: 40%;
-    background-color: #710018;
+    background-color: rgba(49, 105, 149, 0.7);
+    color: rgba(12, 26, 39, 1);
   }
 }
 
@@ -235,17 +240,17 @@ button {
 }
 
 button:hover {
-  background-color: rgba(113, 0, 24, 0.4);
-  color: rgba(150, 0, 39, 1);
+  background-color: rgba(49, 105, 149, 0.4);
+  color: rgba(12, 26, 39, 1);
 }
 
 button:focus {
-  background-color: rgba(249, 242, 230, 0.2);
+  background-color: rgba(18, 120, 38, 0.7);
   outline: none;
 }
 
 .sender {
-  margin-top: 2rem;
+  margin-top: 4rem;
   display: flex;
   flex-flow: column;
   width: 100%;
@@ -259,17 +264,29 @@ button:focus {
   }
 }
 
+.sound-play {
+  display: flex;
+  width: 100%;
+  margin-top: 0.8rem;
+
+  & button {
+    width: 20%;
+    margin-right: 1rem;
+  }
+}
+
 #save {
   margin: 3rem auto 0;
-  background-color: 970022;
   border: none;
 
   &:hover {
-    background-color: rgba(113, 0, 24, 0.4);
+    background-color: rgba(49, 105, 149, 0.4);
+    color: rgba(12, 26, 39, 1);
   }
 
   &:focus {
-    background-color: rgba(113, 0, 24, 0.4);
+    background-color: rgba(49, 105, 149, 0.4);
+    color: #316995;
   }
 }
 
@@ -280,17 +297,18 @@ button:focus {
   align-items: center;
 
   & h1 {
-    color: rgba(242, 242, 242, 0.7);
-    font-weight: lighter;
+    color: rgba(242, 242, 242, 1);
+    font-weight: 300;
   }
 }
 
 .newLink {
-  margin-top: 4rem;
+  margin-top: 7rem;
+  color: #316995;
 }
 
 .to {
-  color: #970022;
+  color: #316995;
   font-size: 1em;
   z-index: -2;
   text-align: center;
@@ -299,14 +317,10 @@ button:focus {
 }
 
 a {
-  text-decoration: none;
-  margin-top: 1rem;
-  text-transform: none;
-  color: #970022;
-  font-size: 1.3em;
+  color: #316995;
+  font-size: 1.1em;
   text-align: center;
   width: 100%;
-  transition: font-size 0.5s, color 0.5s;
 }
 
 #particles-js {
@@ -316,4 +330,13 @@ a {
   height: 100%;
   background-repeat: no-repeat;
   top: 0;
+}
+
+.homeLink a {
+  font-weight: 200;
+  color: rgba(255, 255, 255, 0.5);
+  position: fixed;
+  bottom: 4rem;
+  right: 2rem;
+  width: 30rem;
 }
