--- a/src/css/style.css
+++ b/src/css/style.css
@@ -194,7 +194,19 @@ button {
   & button {
     width: 100%;
     color: rgba(12, 26, 39, 1);
-    background-color: #316995;
+    background-color: #6c9dc9;
+  }
+
+  & #record:hover {
+    width: 100%;
+    color: #0f1927;
+    background-color: #3d6395;
+  }
+
+  & #record:focus {
+    width: 100%;
+    color: #0f1927;
+    background-color: rgba(18, 120, 38, 0.7);
   }
 }
 
@@ -278,15 +290,16 @@ button:focus {
 #save {
   margin: 3rem auto 0;
   border: none;
+  background-color: #6c9dc9;
 
   &:hover {
-    background-color: rgba(49, 105, 149, 0.4);
+    background-color: #316995);
     color: rgba(12, 26, 39, 1);
   }
 
   &:focus {
-    background-color: rgba(49, 105, 149, 0.4);
-    color: #316995;
+    background-color: #316995;
+    color: rgba(12, 26, 39, 1);
   }
 }
 
